--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://belalzedan.github.io/portfolio",
+  "homepage": "https://belalzedan.github.io/portfolio",
   "name": "3d-portfolio",
   "private": true,
   "version": "0.0.0",
@@ -8,8 +8,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy":"gh-pages -d build"
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d dist",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
